@@ -13,6 +13,7 @@ import lispa.schedulers.bean.target.sfera.DmalmMisura;
 import lispa.schedulers.constant.DmAlmConstants;
 import lispa.schedulers.dao.target.PeiOdsDAO;
 import lispa.schedulers.exception.DAOException;
+import lispa.schedulers.exception.PropertiesReaderException;
 import lispa.schedulers.manager.ConnectionManager;
 import lispa.schedulers.manager.DmAlmConfigReaderProperties;
 import lispa.schedulers.manager.ErrorManager;
@@ -42,6 +43,7 @@ public class DmAlmMisuraDAO {
 	
 	private static SQLTemplates dialect = new HSQLDBTemplates();
 
+	private DmAlmMisuraDAO() {}
 	public static void delete() throws DAOException, SQLException {
 
 		ConnectionManager cm = null;
@@ -71,187 +73,177 @@ public class DmAlmMisuraDAO {
 	public static List<DmalmMisura> getAllMisure(Timestamp dataEsecuzione)
 			throws DAOException {
 		ConnectionManager cm = null;
-		Connection connection = null;
-		PreparedStatement ps = null;
-		ResultSet rs = null;
-
 		DmalmMisura bean = null;
-		List<DmalmMisura> misure = new ArrayList<DmalmMisura>();
-		
+		List<DmalmMisura> misure = new ArrayList<>();
+		String sql="";
 		try {
 			cm = ConnectionManager.getInstance();
-			connection = cm.getConnectionOracle();
-
-			String sql = QueryManager.getInstance().getQuery(
+			
+			sql = QueryManager.getInstance().getQuery(
 					DmAlmConfigReaderProperties.SQL_STG_MISURES);
-			ps = connection.prepareStatement(sql);
-
-			ps.setTimestamp(1, dataEsecuzione);
-			rs = ps.executeQuery();
-			
-			logger.debug("Query Eseguita!");
-			
-			while (rs.next()) {
-				// Elabora il risultato
-				bean = new DmalmMisura();
-				bean.setA1Num(rs.getDouble("A_1_NUM"));
-				bean.setA1Ufp(rs.getDouble("A_1_UFP"));
-				bean.setA2Num(rs.getDouble("A_2_NUM"));
-				bean.setA2Ufp(rs.getDouble("A_2_UFP"));
-				bean.setAdjmax(rs.getDouble("ADJMAX"));
-				bean.setAdjmin(rs.getDouble("ADJMIN"));
-				bean.setAdjufp(rs.getDouble("ADJUFP"));
-				bean.setAmbito(rs.getString("AMBITO"));
-				bean.setApproccio(rs.getString("APPROCCIO"));
-				bean.setB1Num(rs.getDouble("B_1_NUM"));
-				bean.setB1Ufp(rs.getDouble("B_1_UFP"));
-				bean.setB2Num(rs.getDouble("B_2_NUM"));
-				bean.setB2Ufp(rs.getDouble("B_2_UFP"));
-				bean.setB3Num(rs.getDouble("B_3_NUM"));
-				bean.setB3Ufp(rs.getDouble("B_3_UFP"));
-				bean.setB5Num(rs.getDouble("B_5_NUM"));
-				bean.setB5Ufp(rs.getDouble("B_5_UFP"));
-				bean.setBfpNum(rs.getDouble("BFP_NUM"));
-				bean.setBfpUfp(rs.getDouble("BFP_UFP"));
-				bean.setC1Num(rs.getDouble("C_1_NUM"));
-				bean.setC1Ufp(rs.getDouble("C_1_UFP"));
-				bean.setC2Num(rs.getDouble("C_2_NUM"));
-				bean.setC2Ufp(rs.getDouble("C_2_UFP"));
-				bean.setConfine(rs.getString("CONFINE"));
-				bean.setCrudNum(rs.getDouble("CRUD_NUM"));
-				bean.setCrudUfp(rs.getDouble("CRUD_UFP"));
-				bean.setD1Num(rs.getDouble("D_1_NUM"));
-				bean.setD1Ufp(rs.getDouble("D_1_UFP"));
-				bean.setD2Num(rs.getDouble("D_2_NUM"));
-				bean.setD2Ufp(rs.getDouble("D_2_UFP"));
-				bean.setDataConsolidamento(rs.getTimestamp("DT_CONSOLIDAMENTO"));
-				bean.setDataCreazione(rs.getTimestamp("DT_CREAZIONE"));
-				bean.setDataFineVerificafp(rs
-						.getTimestamp("DT_FINE_VERIFICA_FP"));
-				bean.setDataInizioVerificaFp(rs
-						.getTimestamp("DT_INIZIO_VERIFICA_FP"));
-				bean.setDataRiferimento(rs.getTimestamp("DT_RIFERIMENTO"));
-				bean.setDmalmStgMisuraPk(rs.getInt("DMALM_STG_MISURA_PK"));
-				bean.setEifNum(rs.getDouble("EI_NUM"));
-				bean.setEifUfp(rs.getDouble("EI_UFP"));
-				bean.setEiNum(rs.getDouble("EIF_NUM"));
-				bean.setEiUfp(rs.getDouble("EIF_UFP"));
-				bean.setEoNum(rs.getDouble("EO_NUM"));
-				bean.setEoUfp(rs.getDouble("EO_UFP"));
-				bean.setEqNum(rs.getDouble("EQ_NUM"));
-				bean.setEqUfp(rs.getDouble("EQ_UFP"));
-				bean.setEsperienza(rs.getString("ESPERIENZA"));
-				bean.setFaseCicloDiVita(rs.getString("FASE_CICLO_DI_VITA"));
-				bean.setFonti(rs.getString("FONTI"));
-				bean.setFpNonPesatiMax(rs.getDouble("FP_NON_PESATI_MAX"));
-				bean.setFpNonPesatiMin(rs.getDouble("FP_NON_PESATI_MIN"));
-				bean.setFpNonPesatiUfp(rs.getDouble("FP_NON_PESATI_UFP"));
-				bean.setFpPesatiMax(rs.getDouble("FP_PESATI_MAX"));
-				bean.setFpPesatiMin(rs.getDouble("FP_PESATI_MIN"));
-				bean.setFpPesatiUfp(rs.getDouble("FP_PESATI_UFP"));
-				bean.setFuNum(rs.getDouble("FU_NUM"));
-				bean.setFuUfp(rs.getDouble("FU_UFP"));
-				bean.setGdgNum(rs.getDouble("GDG_NUM"));
-				bean.setGdgUfp(rs.getDouble("GDG_UFP"));
-				bean.setGeifNum(rs.getDouble("GEI_NUM"));
-				bean.setGeifUfp(rs.getDouble("GEI_UFP"));
-				bean.setGeiNum(rs.getDouble("GEIF_NUM"));
-				bean.setGeiUfp(rs.getDouble("GEIF_UFP"));
-				bean.setGeoNum(rs.getDouble("GEO_NUM"));
-				bean.setGeoUfp(rs.getDouble("GEO_UFP"));
-				bean.setGeqNum(rs.getDouble("GEQ_NUM"));
-				bean.setGeqUfp(rs.getDouble("GEQ_UFP"));
-				bean.setGilfNum(rs.getDouble("GILF_NUM"));
-				bean.setGilfUfp(rs.getDouble("GILF_UFP"));
-				bean.setGpNum(rs.getDouble("GP_NUM"));
-				bean.setGpUfp(rs.getDouble("GP_UFP"));
-				bean.setIdMsr(rs.getInt("ID_MSR"));
-				bean.setIfpNum(rs.getDouble("IFP_NUM"));
-				bean.setIfpUfp(rs.getDouble("IFP_UFP"));
-				bean.setIlfNum(rs.getDouble("ILF_NUM"));
-				bean.setIlfUfp(rs.getDouble("ILF_UFP"));
-				bean.setLdgNum(rs.getDouble("LDG_NUM"));
-				bean.setLdgUfp(rs.getDouble("LDG_UFP"));
-				bean.setLinkDocumentale(rs.getString("LINK_DOCUMENTALE"));
-				bean.setMetodo(rs.getString("METODO"));
-				bean.setMfNum(rs.getDouble("MF_NUM"));
-				bean.setMfUfp(rs.getDouble("MF_UFP"));
-				bean.setMldgNum(rs.getDouble("MLDG_NUM"));
-				bean.setMldgUfp(rs.getDouble("MLDG_UFP"));
-				bean.setModello(rs.getString("MODELLO"));
-				bean.setMpNum(rs.getDouble("MP_NUM"));
-				bean.setMpUfp(rs.getDouble("MP_UFP"));
-				bean.setNomeMisura(rs.getString("NOME_MISURA"));
-				bean.setNoteMsr(rs.getString("NOTE_MSR"));
-				bean.setPercentualeDiScostamento(rs
-						.getDouble("PERCENTUALE_DI_SCOSTAMENTO"));
-				bean.setPfNum(rs.getDouble("PF_NUM"));
-				bean.setPfUfp(rs.getDouble("PF_UFP"));
-				bean.setPostVerAddCfp(rs.getInt("POST_VER_ADD_CFP"));
-				bean.setPostVerChg(rs.getInt("POST_VER_CHG"));
-				bean.setPostVerDel(rs.getInt("POST_VER_DEL"));
-				bean.setPostVerFp(rs.getInt("POST_VER_FP"));
-				bean.setPreVerAddCfp(rs.getInt("PRE_VER_ADD_CFP"));
-				bean.setPreVerChg(rs.getInt("PRE_VER_CHG"));
-				bean.setPreVerDel(rs.getInt("PRE_VER_DEL"));
-				bean.setPreVerFp(rs.getInt("PRE_VER_FP"));
-				bean.setProgettoSfera(rs.getString("PROGETTO_SFERA"));
-				bean.setResponsabile(rs.getString("RESPONSABILE"));
-				bean.setScopo(rs.getString("SCOPO"));
-				bean.setStatoMisura(rs.getString("STATO_MISURA"));
-				bean.setTpNum(rs.getDouble("TP_NUM"));
-				bean.setTpUfp(rs.getDouble("TP_UFP"));
-				bean.setUgdgNum(rs.getDouble("UGDG_NUM"));
-				bean.setUgdgUfp(rs.getDouble("UGDG_UFP"));
-				bean.setUgepNum(rs.getDouble("UGEP_NUM"));
-				bean.setUgepUfp(rs.getString("UGEP_UFP"));
-				bean.setUgoNum(rs.getDouble("UGO_NUM"));
-				bean.setUgoUfp(rs.getDouble("UGO_UFP"));
-				bean.setUgpNum(rs.getDouble("UGP_NUM"));
-				bean.setUgpUfp(rs.getDouble("UGP_UFP"));
-				bean.setUtenteMisuratore(rs.getString("UTENTE_MISURATORE"));
-				bean.setValoreScostamento(rs.getDouble("VALORE_SCOSTAMENTO"));
-				bean.setVersioneMsr(rs.getString("VERSIONE_MSR"));
-				
-				// Uso il campo Annullato in quanto i campi applicazione non esiste
-				bean.setAnnullato(rs.getString("APPLICAZIONE"));
-				
-				bean.setDataModifica(dataEsecuzione);
-				bean.setDataStoricizzazione(bean.getDataModifica());
-				bean.setRankStatoMisura(new Double(1));
-				bean.setDmalmMisuraPk(rs.getInt("DMALM_MISURA_PK"));
-				bean.setIdProgetto(rs.getShort("ID_PROGETTO"));
-				bean.setIdAsm(rs.getShort("ID_ASM"));
-				bean.setDataCaricamento(dataEsecuzione);
-				bean.setDmalmPrjFk(getProjectById(rs.getShort("ID_PROGETTO"),
-						dataEsecuzione));
-				misure.add(bean);
-			}
-			
-			if (rs != null) {
-				rs.close();
-			}
-			if (ps != null) {
-				ps.close();
-			}
-		} catch (DAOException e) {
+		} catch (PropertiesReaderException e) {
 			ErrorManager.getInstance().exceptionOccurred(true, e);
 			logger.error(e.getMessage(), e);
-			
-		} catch (Exception e) {
-			ErrorManager.getInstance().exceptionOccurred(true, e);
-			logger.error(e.getMessage(), e);
-
-		} finally {
-			if (cm != null) {
-				cm.closeConnection(connection);
-			}
 		}
+		if(sql.isEmpty())
+			return misure;
+		
+			try(Connection connection = cm.getConnectionOracle();
+					
+				PreparedStatement ps = connection.prepareStatement(sql);
+				ResultSet rs = ps.executeQuery();){
+				ps.setTimestamp(1, dataEsecuzione);
+				logger.debug("Query Eseguita!");
+				
+				while (rs.next()) {
+					// Elabora il risultato
+					bean = new DmalmMisura();
+					bean.setA1Num(rs.getDouble("A_1_NUM"));
+					bean.setA1Ufp(rs.getDouble("A_1_UFP"));
+					bean.setA2Num(rs.getDouble("A_2_NUM"));
+					bean.setA2Ufp(rs.getDouble("A_2_UFP"));
+					bean.setAdjmax(rs.getDouble("ADJMAX"));
+					bean.setAdjmin(rs.getDouble("ADJMIN"));
+					bean.setAdjufp(rs.getDouble("ADJUFP"));
+					bean.setAmbito(rs.getString("AMBITO"));
+					bean.setApproccio(rs.getString("APPROCCIO"));
+					bean.setB1Num(rs.getDouble("B_1_NUM"));
+					bean.setB1Ufp(rs.getDouble("B_1_UFP"));
+					bean.setB2Num(rs.getDouble("B_2_NUM"));
+					bean.setB2Ufp(rs.getDouble("B_2_UFP"));
+					bean.setB3Num(rs.getDouble("B_3_NUM"));
+					bean.setB3Ufp(rs.getDouble("B_3_UFP"));
+					bean.setB4Num(rs.getDouble("B_4_NUM"));
+					bean.setB4Ufp(rs.getDouble("B_4_UFP"));
+					bean.setB5Num(rs.getDouble("B_5_NUM"));
+					bean.setB5Ufp(rs.getDouble("B_5_UFP"));
+					bean.setBfpNum(rs.getDouble("BFP_NUM"));
+					bean.setBfpUfp(rs.getDouble("BFP_UFP"));
+					bean.setC1Num(rs.getDouble("C_1_NUM"));
+					bean.setC1Ufp(rs.getDouble("C_1_UFP"));
+					bean.setC2Num(rs.getDouble("C_2_NUM"));
+					bean.setC2Ufp(rs.getDouble("C_2_UFP"));
+					bean.setConfine(rs.getString("CONFINE"));
+					bean.setCrudNum(rs.getDouble("CRUD_NUM"));
+					bean.setCrudUfp(rs.getDouble("CRUD_UFP"));
+					bean.setD1Num(rs.getDouble("D_1_NUM"));
+					bean.setD1Ufp(rs.getDouble("D_1_UFP"));
+					bean.setD2Num(rs.getDouble("D_2_NUM"));
+					bean.setD2Ufp(rs.getDouble("D_2_UFP"));
+					bean.setDataConsolidamento(rs.getTimestamp("DT_CONSOLIDAMENTO"));
+					bean.setDataCreazione(rs.getTimestamp("DT_CREAZIONE"));
+					bean.setDataFineVerificafp(rs
+							.getTimestamp("DT_FINE_VERIFICA_FP"));
+					bean.setDataInizioVerificaFp(rs
+							.getTimestamp("DT_INIZIO_VERIFICA_FP"));
+					bean.setDataRiferimento(rs.getTimestamp("DT_RIFERIMENTO"));
+					bean.setDmalmStgMisuraPk(rs.getInt("DMALM_STG_MISURA_PK"));
+					bean.setEifNum(rs.getDouble("EI_NUM"));
+					bean.setEifUfp(rs.getDouble("EI_UFP"));
+					bean.setEiNum(rs.getDouble("EIF_NUM"));
+					bean.setEiUfp(rs.getDouble("EIF_UFP"));
+					bean.setEoNum(rs.getDouble("EO_NUM"));
+					bean.setEoUfp(rs.getDouble("EO_UFP"));
+					bean.setEqNum(rs.getDouble("EQ_NUM"));
+					bean.setEqUfp(rs.getDouble("EQ_UFP"));
+					bean.setEsperienza(rs.getString("ESPERIENZA"));
+					bean.setFaseCicloDiVita(rs.getString("FASE_CICLO_DI_VITA"));
+					bean.setFonti(rs.getString("FONTI"));
+					bean.setFpNonPesatiMax(rs.getDouble("FP_NON_PESATI_MAX"));
+					bean.setFpNonPesatiMin(rs.getDouble("FP_NON_PESATI_MIN"));
+					bean.setFpNonPesatiUfp(rs.getDouble("FP_NON_PESATI_UFP"));
+					bean.setFpPesatiMax(rs.getDouble("FP_PESATI_MAX"));
+					bean.setFpPesatiMin(rs.getDouble("FP_PESATI_MIN"));
+					bean.setFpPesatiUfp(rs.getDouble("FP_PESATI_UFP"));
+					bean.setFuNum(rs.getDouble("FU_NUM"));
+					bean.setFuUfp(rs.getDouble("FU_UFP"));
+					bean.setGdgNum(rs.getDouble("GDG_NUM"));
+					bean.setGdgUfp(rs.getDouble("GDG_UFP"));
+					bean.setGeifNum(rs.getDouble("GEI_NUM"));
+					bean.setGeifUfp(rs.getDouble("GEI_UFP"));
+					bean.setGeiNum(rs.getDouble("GEIF_NUM"));
+					bean.setGeiUfp(rs.getDouble("GEIF_UFP"));
+					bean.setGeoNum(rs.getDouble("GEO_NUM"));
+					bean.setGeoUfp(rs.getDouble("GEO_UFP"));
+					bean.setGeqNum(rs.getDouble("GEQ_NUM"));
+					bean.setGeqUfp(rs.getDouble("GEQ_UFP"));
+					bean.setGilfNum(rs.getDouble("GILF_NUM"));
+					bean.setGilfUfp(rs.getDouble("GILF_UFP"));
+					bean.setGpNum(rs.getDouble("GP_NUM"));
+					bean.setGpUfp(rs.getDouble("GP_UFP"));
+					bean.setIdMsr(rs.getInt("ID_MSR"));
+					bean.setIfpNum(rs.getDouble("IFP_NUM"));
+					bean.setIfpUfp(rs.getDouble("IFP_UFP"));
+					bean.setIlfNum(rs.getDouble("ILF_NUM"));
+					bean.setIlfUfp(rs.getDouble("ILF_UFP"));
+					bean.setLdgNum(rs.getDouble("LDG_NUM"));
+					bean.setLdgUfp(rs.getDouble("LDG_UFP"));
+					bean.setLinkDocumentale(rs.getString("LINK_DOCUMENTALE"));
+					bean.setMetodo(rs.getString("METODO"));
+					bean.setMfNum(rs.getDouble("MF_NUM"));
+					bean.setMfUfp(rs.getDouble("MF_UFP"));
+					bean.setMldgNum(rs.getDouble("MLDG_NUM"));
+					bean.setMldgUfp(rs.getDouble("MLDG_UFP"));
+					bean.setModello(rs.getString("MODELLO"));
+					bean.setMpNum(rs.getDouble("MP_NUM"));
+					bean.setMpUfp(rs.getDouble("MP_UFP"));
+					bean.setNomeMisura(rs.getString("NOME_MISURA"));
+					bean.setNoteMsr(rs.getString("NOTE_MSR"));
+					bean.setPercentualeDiScostamento(rs
+							.getDouble("PERCENTUALE_DI_SCOSTAMENTO"));
+					bean.setPfNum(rs.getDouble("PF_NUM"));
+					bean.setPfUfp(rs.getDouble("PF_UFP"));
+					bean.setPostVerAddCfp(rs.getInt("POST_VER_ADD_CFP"));
+					bean.setPostVerChg(rs.getInt("POST_VER_CHG"));
+					bean.setPostVerDel(rs.getInt("POST_VER_DEL"));
+					bean.setPostVerFp(rs.getInt("POST_VER_FP"));
+					bean.setPreVerAddCfp(rs.getInt("PRE_VER_ADD_CFP"));
+					bean.setPreVerChg(rs.getInt("PRE_VER_CHG"));
+					bean.setPreVerDel(rs.getInt("PRE_VER_DEL"));
+					bean.setPreVerFp(rs.getInt("PRE_VER_FP"));
+					bean.setProgettoSfera(rs.getString("PROGETTO_SFERA"));
+					bean.setResponsabile(rs.getString("RESPONSABILE"));
+					bean.setScopo(rs.getString("SCOPO"));
+					bean.setStatoMisura(rs.getString("STATO_MISURA"));
+					bean.setTpNum(rs.getDouble("TP_NUM"));
+					bean.setTpUfp(rs.getDouble("TP_UFP"));
+					bean.setUgdgNum(rs.getDouble("UGDG_NUM"));
+					bean.setUgdgUfp(rs.getDouble("UGDG_UFP"));
+					bean.setUgepNum(rs.getDouble("UGEP_NUM"));
+					bean.setUgepUfp(rs.getString("UGEP_UFP"));
+					bean.setUgoNum(rs.getDouble("UGO_NUM"));
+					bean.setUgoUfp(rs.getDouble("UGO_UFP"));
+					bean.setUgpNum(rs.getDouble("UGP_NUM"));
+					bean.setUgpUfp(rs.getDouble("UGP_UFP"));
+					bean.setUtenteMisuratore(rs.getString("UTENTE_MISURATORE"));
+					bean.setValoreScostamento(rs.getDouble("VALORE_SCOSTAMENTO"));
+					bean.setVersioneMsr(rs.getString("VERSIONE_MSR"));
+					
+					// Uso il campo Annullato in quanto i campi applicazione non esiste
+					bean.setAnnullato(rs.getString("APPLICAZIONE"));
+					
+					bean.setDataModifica(dataEsecuzione);
+					bean.setDataStoricizzazione(bean.getDataModifica());
+					bean.setRankStatoMisura(Double.valueOf(1));
+					bean.setDmalmMisuraPk(rs.getInt("DMALM_MISURA_PK"));
+					bean.setIdProgetto(rs.getShort("ID_PROGETTO"));
+					bean.setIdAsm(rs.getShort("ID_ASM"));
+					bean.setDataCaricamento(dataEsecuzione);
+					bean.setDmalmPrjFk(getProjectById(rs.getShort("ID_PROGETTO"),
+							dataEsecuzione));
+					misure.add(bean);
+				}
+			} catch (DAOException | SQLException e) {
+				ErrorManager.getInstance().exceptionOccurred(true, e);
+				logger.error(e.getMessage(), e);
+			}
+			
+		
 
 		return misure;
 	}
 
-	public static Integer getProjectById(short idProg, Timestamp dt_modifica)
+	public static Integer getProjectById(short idProg, Timestamp dtModifica)
 			throws DAOException {
 		QDmalmProgettoSfera progetto = QDmalmProgettoSfera.dmalmProgettoSfera;
 		ConnectionManager cm = null;
@@ -265,14 +257,14 @@ public class DmAlmMisuraDAO {
 			SQLQuery query = new SQLQuery(connection, dialect);
 			progettoFk = query.from(QDmalmProgettoSfera.dmalmProgettoSfera)
 					.where(progetto.idProgetto.eq(idProg))
-					.where(progetto.dataFineValidita.goe(dt_modifica))
-					.where(progetto.dataInizioValidita.loe(dt_modifica))
+					.where(progetto.dataFineValidita.goe(dtModifica))
+					.where(progetto.dataInizioValidita.loe(dtModifica))
 					.orderBy(progetto.dataInizioValidita.desc())
 					.list(progetto.dmalmProgettoSferaPk);
-			if(progettoFk.size()>0)
+			if(!progettoFk.isEmpty())
 				return progettoFk.get(0);
 			else{
-				logger.info("Attenzione, con idProgetto"+idProg+ "Dt modifica "+dt_modifica+ " non trovo progetto sfera");
+				logger.info("Attenzione, con idProgetto"+idProg+ "Dt modifica "+dtModifica+ " non trovo progetto sfera");
 				return 0;
 			}
 
@@ -294,7 +286,7 @@ public class DmAlmMisuraDAO {
 		ConnectionManager cm = null;
 		Connection connection = null;
 
-		List<Tuple> misures = new LinkedList<Tuple>();
+		List<Tuple> misures = new LinkedList<>();
 
 		try {
 			cm = ConnectionManager.getInstance();
@@ -306,7 +298,7 @@ public class DmAlmMisuraDAO {
 					.where(misura.idAsm.eq(misure.getIdAsm()))
 					.where(misura.idProgetto.eq(misure.getIdProgetto()))
 					.where(misura.idMsr.eq(misure.getIdMsr()))
-					.where(misura.rankStatoMisura.eq(new Double(1)))
+					.where(misura.rankStatoMisura.eq(Double.valueOf(1)))
 					.list(misura.all());
 		} catch (Exception e) {
 			logger.error(e.getMessage(), e);
@@ -320,7 +312,7 @@ public class DmAlmMisuraDAO {
 		return misures;
 	}
 
-	public static void insertMisure(Timestamp dataEsecuzione, DmalmMisura misure)
+	public static void insertMisure(DmalmMisura misure)
 			throws DAOException, SQLException {
 		ConnectionManager cm = null;
 		Connection connection = null;
@@ -390,7 +382,7 @@ public class DmAlmMisuraDAO {
 					.where(misura.idAsm.eq(misure.getIdAsm()))
 					.where(misura.idProgetto.eq(misure.getIdProgetto()))
 					.where(misura.idMsr.eq(misure.getIdMsr()))
-					.where(misura.rankStatoMisura.eq(new Double(1)))
+					.where(misura.rankStatoMisura.eq(Double.valueOf(1)))
 					.set(misura.a1Num, misure.getA1Num())
 					.set(misura.a1Ufp, misure.getA1Ufp())
 					.set(misura.a2Num, misure.getA2Num())
@@ -406,6 +398,8 @@ public class DmAlmMisuraDAO {
 					.set(misura.b2Ufp, misure.getB2Ufp())
 					.set(misura.b3Num, misure.getB3Num())
 					.set(misura.b3Ufp, misure.getB3Ufp())
+					.set(misura.b4Num, misure.getB4Num())
+					.set(misura.b4Ufp, misure.getB4Ufp())
 					.set(misura.b5Num, misure.getB5Num())
 					.set(misura.b5Ufp, misure.getB5Ufp())
 					.set(misura.bfpNum, misure.getBfpNum())
@@ -540,7 +534,7 @@ public class DmAlmMisuraDAO {
 					.where(misura.idAsm.eq(misure.getIdAsm()))
 					.where(misura.idProgetto.eq(misure.getIdProgetto()))
 					.where(misura.idMsr.eq(misure.getIdMsr()))
-					.where(misura.rankStatoMisura.eq(new Double(1)))
+					.where(misura.rankStatoMisura.eq(Double.valueOf(1)))
 					.set(misura.annullato, DmAlmConstants.SFERA_ANNULLATO_FISICAMENTE).execute();
 			
 			connection.commit();
@@ -558,7 +552,7 @@ public class DmAlmMisuraDAO {
 		ConnectionManager cm = null;
 		Connection connection = null;
 
-		List<Tuple> mis = new ArrayList<Tuple>();
+		List<Tuple> mis = new ArrayList<>();
 
 		try {
 
@@ -573,7 +567,7 @@ public class DmAlmMisuraDAO {
 					.join(asm).on(asm.dmalmAsmPk.eq(prog.dmalmAsmFk))
 					.where(misura.nomeMisura.eq(msr.getNomeMisura()))
 					.where(misura.annullato.eq(DmAlmConstants.SFERA_ANNULLATO_FISICAMENTE))
-					.where(misura.rankStatoMisura.eq(new Double(1)))
+					.where(misura.rankStatoMisura.eq(Double.valueOf(1)))
 					.where(prog.nomeProgetto.eq(parNomeProgetto))
 					.where(asm.applicazione.eq(parApplicazione))
 					.list(misura.all());
@@ -595,9 +589,6 @@ public class DmAlmMisuraDAO {
 			throws DAOException {
 		ConnectionManager cm = null;
 		Connection connection = null;
-		PreparedStatement ps = null;
-		ResultSet rs = null;
-
 		Integer resMisuraPk = 0;
 		try {
 			cm = ConnectionManager.getInstance();
@@ -605,18 +596,14 @@ public class DmAlmMisuraDAO {
 
 			String sql = QueryManager.getInstance().getQuery(
 					DmAlmConfigReaderProperties.SFERA_MISURA_PK_NEXTVAL);
-			ps = connection.prepareStatement(sql);
-
-			rs = ps.executeQuery();
-			rs.next();
-			resMisuraPk = rs.getInt("MISURA_PK");
 			
-			if (rs != null) {
-				rs.close();
+
+			try(PreparedStatement ps = connection.prepareStatement(sql);
+				ResultSet rs = ps.executeQuery();){
+				rs.next();
+				resMisuraPk = rs.getInt("MISURA_PK");
 			}
-			if (ps != null) {
-				ps.close();
-			}
+		
 		} catch (DAOException e) {
 			ErrorManager.getInstance().exceptionOccurred(true, e);
 
@@ -633,11 +620,11 @@ public class DmAlmMisuraDAO {
 	}
 	
 	public static List<Tuple> checkLinkMisureSferaWi(Short idProgetto)
-			throws Exception {
+			{
 		ConnectionManager cm = null;
 		Connection connection = null;
 
-		List<Tuple> mis = new ArrayList<Tuple>();
+		List<Tuple> mis = new ArrayList<>();
 
 		try {
 
@@ -649,7 +636,7 @@ public class DmAlmMisuraDAO {
 			mis = query
 					.from(misura)
 					.where(misura.idProgetto.eq(idProgetto))
-					.where(misura.rankStatoMisura.eq(new Double(1)))
+					.where(misura.rankStatoMisura.eq(Double.valueOf(1)))
 					.where(misura.nomeMisura.notLike("%NOWI%"))
 					.where(misura.annullato.notLike("ANNULLATO%"))
 					.where(misura.statoMisura.notIn("Consolidata", "Sospesa"))
@@ -661,7 +648,11 @@ public class DmAlmMisuraDAO {
 
 		} finally {
 			if (cm != null) {
-				cm.closeConnection(connection);
+				try {
+					cm.closeConnection(connection);
+				} catch (DAOException e) {
+					logger.error(e.getMessage(), e);
+				}
 			}
 		}
 
